--- a/src/main/webapp/WEB-INF/views/papagoview.html
+++ b/src/main/webapp/WEB-INF/views/papagoview.html
@@ -108,7 +108,7 @@ button:hover:before,button:hover:after{
         <!--번역창 1-->
         <nav>
             <select name="language" >
-                <option value="none" selected>========선 택========</option>
+                <option value="none" selected>======언어선택======</option>
                 <option value="ko">한국어</option>
                 <option value="en">영어</option>
                 <option value="ja">일본어</option>
@@ -131,7 +131,7 @@ button:hover:before,button:hover:after{
         <!--번역창 2-->
         <section>
                 <select name="language" >
-                        <option value="none" selected>========선 택========</option>
+                        <option value="none" selected>======언어선택======</option>
                         <option value="ko">한국어</option>
                         <option value="en">영어</option>
                         <option value="ja">일본어</option>
@@ -151,7 +151,7 @@ button:hover:before,button:hover:after{
                     
         </section>
         <!--풋터-->
-        <footer>footer</footer>
+        <footer style="color: #1AAB8A; ">designed by hong</footer>
     </div>
 </body>
 </html>
